# skillscli

./: .gitignore  CLAUDE.md  Cargo.toml  HOMEBREW_SETUP_QUICK.md  HOMEBREW_TAP.md  INSTALLATION.md  LICENSE  README.md  RELEASING.md  SOLID_REFACTORING.md
.github/: HOMEBREW_SETUP.md  RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  test-release.yml  update-homebrew.yml
Formula/: skills.rb
src/: github.rs  installer.rs  main.rs  market.rs  models.rs  skill_finder.rs
