[package]
name = "skills"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3.8"
zip = "0.6"
walkdir = "2.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
